    <resources>
        <string name="app_name">ShanPai</string>
        <string name="action_settings">Settings</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="register">Register</string>
        <string name="ok">OK</string>
        <string name="repwd">Password Again</string>
        <string name="back">BACK</string>
        <string name="inputID">input your ID please</string>
        <string name="inputPWD">input your password please</string>
        <string name="inputPWD1">input your password once please</string>
        <string name="differentPWD">the passwords you input twice are different </string>
        <string name="systemMessage">System Message</string>
        <string name="exit">Are you sure to exit?</string>
        <string name="cancel">Cancel</string>
        <string name="hot">HOT</string>
        <string name="follow">Follow</string>
        <string name="mine">Mine</string>
        <string name="profession">Professional</string>
        <string name="wellsold">Well-Sold</string>
        <string name="daily">Daily</string>
        <string name="people">People</string>
        <string name="news">News</string>
        <string name="view">View</string>
        <string name="buy">Buy</string>
        <string name="description">Description:</string>
        <string name="upload">Upload</string>
        <string name="setPrice">Set Price:</string>
        <string name="exitupload">Are you sure exit?</string>
        <string name="uploadsucess">The photo upload successfully!</string>
        <string name="buysucess">Buy photo successfully!</string>
        <string name="price">Price:</string>
        <string name="love">Love %:</string>
        <string name="surebuy">are you sure to buy it?</string>
        <string name="buyerror">your balance is not enough!!!!!</string>
        <string name="donate">you have donated:</string>
        <string name="balance">your balance:</string>


    </resources>


