<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:background="@color/background_material_dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0">

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/hot"
            android:id="@+id/hot"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:id="@+id/follow"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:id="@+id/mine"
            android:layout_centerHorizontal="true" />


    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:columnCount="2">

        <ImageButton
            android:src="@drawable/view2"
            android:id="@+id/professional"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="0"
            android:layout_column="0" />
        <ImageButton android:src="@drawable/news1"
            android:id="@+id/well_sold"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:text="@string/profession"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="0"/>
        <TextView
            android:text="@string/wellsold"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="1"
            android:layout_column="1"/>


        <ImageButton android:src="@drawable/daily1"
            android:id="@+id/daily"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="2"
            android:layout_column="0" />
        <ImageButton android:src="@drawable/people1"
            android:id="@+id/people"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="2"
            android:layout_column="1" />
        <TextView
            android:text="@string/daily"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:text="@string/people"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="4"
            android:layout_column="1"/>

        <ImageButton android:src="@drawable/news3"
            android:id="@+id/news"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="5"
            android:layout_column="0" />
        <ImageButton android:src="@drawable/view4"
            android:id="@+id/view"
            android:layout_width="192dp"
            android:layout_height="110dp"
            android:layout_row="5"
            android:layout_column="1" />
        <TextView
            android:text="@string/news"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="6"
            android:layout_column="0"/>
        <TextView
            android:text="@string/view"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_row="6"
            android:layout_column="1"/>

    </GridLayout>

    <RelativeLayout
        android:layout_row="2"
        android:layout_column="0">
    <ImageButton android:src="@drawable/add"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="145sp"
        android:layout_marginStart="43dp" />

    </RelativeLayout>

</GridLayout>
