<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mine">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0">

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/hot"
            android:id="@+id/mhot"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:id="@+id/minefollow"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:id="@+id/mmine"
            android:layout_centerHorizontal="true" />
        </LinearLayout>

</LinearLayout>
